Fixed the Register page (the css file) as the form was being pushed out of the screen

--- a/src/pages/Auth/AuthForm.css
+++ b/src/pages/Auth/AuthForm.css
@@ -83,8 +83,9 @@ form{
     right: 50%;
 }
 
-.form-box.register{
-    visibility: hidden;
+/* Fix the massive spacing on the password rules */
+.form-box.register div p {
+    margin: 2px 0;
 }
 
 .container.active .form-box.register{
@@ -93,7 +94,7 @@ form{
 
 .input-box{
     position: relative;
-    margin: 30px 0;
+    margin: 12px 0;
 }
 
 .input-box input{
